fixed text width to 72ch and justify align

--- a/assets/_custom.scss
+++ b/assets/_custom.scss
@@ -79,10 +79,12 @@
 
 .articulo {
     margin-bottom: $padding-16 * 1.5;
+    max-width: 72ch;
     
     p {
         margin: 0;
         margin-bottom: 0.8em;
+        text-align: justify;
     }
 }
 
